--- a/templates/basic_app/relative_url_templates.html
+++ b/templates/basic_app/relative_url_templates.html
@@ -8,6 +8,7 @@
 <body>
   <h1>
     Welcome to Relative URL Templates
+    <a href="{% url 'basic_app:other' %}">The other page.</a>
   </h1>
 </body>
 </html>
