--- a/templates/basic_app/relative_url_templates.html
+++ b/templates/basic_app/relative_url_templates.html
@@ -9,6 +9,7 @@
   <h1>
     Welcome to Relative URL Templates
     <a href="{% url 'basic_app:other' %}">The other page.</a>
+    <a href="{% url 'admin:index' %}">Admin</a>
   </h1>
 </body>
 </html>
