--- a/templates/basic_app/other.html
+++ b/templates/basic_app/other.html
@@ -1,14 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Other</title>
-</head>
-<body>
-  <h1>
-    Other Page
+{% extends 'basic_app/base.html' %}
+  {% block body_block %}
+    <h1>
+      Other
+    </h1>
     <a href="{% url 'basic_app:relative' %}">Relative url templates</a>
-  </h1>
-</body>
-</html>
+  {% endblock body_block %}
