--- a/templates/basic_app/relative_url_templates.html
+++ b/templates/basic_app/relative_url_templates.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Relative URL Templates</title>
-</head>
-<body>
-  <h1>
-    Welcome to Relative URL Templates
+{% extends 'basic_app/base.html' %}
+  {% block body_block %}
+    <h1>
+      Welcome to Relative URL Templates
+    </h1>
     <a href="{% url 'basic_app:other' %}">The other page.</a>
     <a href="{% url 'admin:index' %}">Admin</a>
-  </h1>
-</body>
-</html>
+  {% endblock body_block %}
