--- a/templates/basic_app/index.html
+++ b/templates/basic_app/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 {% extends 'basic_app/base.html' %}
+{% load my_extras %}
   {% block body_block %}
     <h1>
       Welcome Page!
     </h1>
+    {{ text|upper }}
+    {{ number|add:"99" }}
+    {{ text|cutter:"rld" }}
   {% endblock body_block %}
